Update M2TsStrippingDataSource.java